# axum_todo

./: .env.docker  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Todo Axum.postman_collection.json  docker-compose.prod.yml  docker-compose.yml  justfile  openApi.json
logs/: log.2023-11-25
migrations/: 20230430174553_setup_functions.down.sql  20230929172342_create_table_todo.down.sql  20230929172342_create_table_todo.up.sql
src/: config.rs  error.rs  lib.rs  main.rs  open_api.rs  query_params.rs
src/config/: log.rs  mod.rs
src/models/: todo.rs
src/routes/: mod.rs  todos.rs
