[package]
name = "axum_todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
fake = "2.8.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["uuid", "postgres", "chrono", "json", "runtime-tokio-native-tls"] }
strum_macros = "0.25.3"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
uuid = { version = "1.4.1", features = ["serde"] }
